--- a/ASSETS/CSS/custom.css
+++ b/ASSETS/CSS/custom.css
@@ -1,1 +1,134 @@
-/*# sourceMappingURL=custom.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-transform: capitalize;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  transition: width none;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 5rem;
+  scroll-behavior: smooth;
+}
+
+html::-webkit-scrollbar {
+  width: 1rem;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #444;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  height: 300vh;
+}
+
+.container {
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header__top {
+  background-color: #ffffff;
+}
+.header__top-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 0;
+}
+.header__logo a {
+  font-size: 2.5rem;
+  font-weight: bolder;
+  text-transform: none;
+  color: #444;
+  cursor: pointer;
+}
+.header__logo a i {
+  color: #27ae60;
+  padding-right: 0.5rem;
+}
+.header__search-form {
+  width: 50rem;
+  height: 5rem;
+  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  overflow: hidden;
+}
+.header__search-form input {
+  width: 100%;
+  height: 100%;
+  padding: 0 1.5rem;
+  font-size: 1.5rem;
+  text-transform: none;
+  color: #444;
+}
+.header__search-form label {
+  font-size: 2rem;
+  color: #444;
+  padding-right: 1.5rem;
+  cursor: pointer;
+}
+.header__search-form label:hover {
+  color: #27ae60;
+}
+.header__search-form.active {
+  top: 120%;
+}
+.header__icons div, .header__icons a {
+  font-size: 2.5rem;
+  margin-left: 1.5rem;
+  color: #444;
+  cursor: pointer;
+}
+.header__icons div:hover, .header__icons a:hover {
+  color: #27ae60;
+}
+.header__icons #search-btn {
+  display: none;
+}
+.header__navbar {
+  background-color: #27ae60;
+}
+.header__navbar.active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+.header__menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__menu li {
+  margin: 0 1rem;
+}
+.header__menu li a {
+  display: inline-block;
+  font-size: 1.7rem;
+  padding: 1.2rem;
+  color: #ffffff;
+  cursor: pointer;
+}
+.header__menu li a:hover {
+  background-color: #219150;
+}/*# sourceMappingURL=custom.css.map */
