--- a/ASSETS/CSS/responsive.css
+++ b/ASSETS/CSS/responsive.css
@@ -1,1 +1,51 @@
-/*# sourceMappingURL=responsive.css.map */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+  .container {
+    max-width: 970px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  html {
+    font-size: 50%;
+  }
+  .container {
+    max-width: 750px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  html {
+    font-size: 45%;
+    scroll-padding-top: 0;
+  }
+  body {
+    padding-bottom: 5rem;
+  }
+  .container {
+    max-width: 320px;
+  }
+  .header #search-btn {
+    display: inline-block;
+  }
+  .header__top {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+  .header__search-form {
+    position: absolute;
+    top: -120%;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  }
+  .header__navbar {
+    display: none;
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  html {
+    font-size: 48%;
+  }
+  .container {
+    max-width: 450px;
+  }
+}/*# sourceMappingURL=responsive.css.map */
