--- a/ASSETS/CSS/custom.css
+++ b/ASSETS/CSS/custom.css
@@ -131,4 +131,29 @@ body {
 }
 .header__menu li a:hover {
   background-color: #219150;
+}
+
+.navigation {
+  background-color: #27ae60;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  display: none;
+}
+.navigation__menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.navigation__menu a {
+  display: inline-block;
+  font-size: 2.5rem;
+  padding: 1.8rem 2rem;
+  color: #ffffff;
+}
+.navigation__menu a:hover {
+  background-color: #219150;
 }/*# sourceMappingURL=custom.css.map */
