--- a/ASSETS/CSS/responsive.css
+++ b/ASSETS/CSS/responsive.css
@@ -40,6 +40,9 @@
   .header__navbar {
     display: none;
   }
+  .navigation {
+    display: block;
+  }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   html {
