--- a/ASSETS/CSS/responsive.scss
+++ b/ASSETS/CSS/responsive.scss
@@ -46,6 +46,9 @@
       display: none;
     }
   }
+  .navigation {
+    display: block;
+  }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
